src/objects/afl__Article_Feedback_Values__c.object
<CustomObject>
    <description>Object that stores article feedback configuration data.</description>
    <fields>
        <fullName>afl__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afl__Negative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afl__OrderNegative__c</fullName>
        <label>OrderNegative</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>afl__OrderPositive__c</fullName>
        <label>OrderPositive</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>afl__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>afl__Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afl__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Article Feedback Values</label>
    <nameField>
        <label>Article Feedback Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Feedback Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>